# ivr_assignment

./: README.md
code_results/: details.txt
ivr_assignment/: CMakeLists.txt  package.xml  robot.urdf
ivr_assignment/config/: joints.yaml  joints2.yaml  joints3.yaml
ivr_assignment/launch/: rviz.launch  rviz2.launch  spawn.launch
ivr_assignment/rviz/: object.rviz  robot.rviz
ivr_assignment/src/: image1.py  image2.py  kinematics.py  target_move.py
ivr_assignment/urdf/: camera.urdf  camera2.urdf  object.urdf  object2.urdf  robot.urdf
ivr_assignment/worlds/: CMakeLists.txt  IVRAmbient.cc  IVRAmbient.hh  myworld.world
